[project]
name = "optiv-pan-lib"
version = "0.1.0"
description = "Optiv automation framework for pan-os"
readme = "README.md"
requires-python = "~=3.12"
license = "LicenseRef-Proprietary"
license-files = ["licenses/**"]
authors = [{ name = "Your Org" }]
dependencies = [
    "requests~=2.32.5",
    "xmltodict~=1.0.2",
    "truststore~=0.10.4"
]

[build-system]
requires = ["setuptools~=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"optiv_pan_lib" = ["py.typed"]
